[package]
name = "piston_test_game"
version = "0.1.0"
authors = ["Irjan Olsen <irjan.olsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.33.0"
piston2d-opengl_graphics = "0.67.0"
piston_window = "0.103.0"
roxmltree = "0.7.0"